Fix contact spacing

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -58,3 +58,7 @@ button {
 	color: Coral;
 	transition: 0.2s ease;
 }
+
+#contacts {
+    line-height: 170%;
+}
